--- a/index.html
+++ b/index.html
@@ -9,3 +9,22 @@
   <script src="/build/bundle.js"></script>
 </body>
 </html>
+
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Chatty</title>
+  <style>
+    @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700");
+    @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css");
+
+  </style>
+</head>
+<body>
+<nav class="navbar">
+  <a href="/" class="navbar-brand">Chatty</a>
+</nav>
+
+</body>
+</html>
